--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: /*'Helvetica Neue',*/ 'Arial', sans-serif;
+  font-family: 'Helvetica Neue', 'Arial', sans-serif;
 }
 
 .header {
@@ -251,17 +251,17 @@
   z-index: 1;
 }
 
-.section-title__theme_dark {
+.section-title_theme_dark {
   color: #ffffff;
 }
 
-.section-subtitle__theme_dark {
+.section-subtitle_theme_dark {
   color: #ffffff;
   padding-top: 20px;
   padding-bottom: 80px;
 }
 
-.table__theme_dark {
+.table_theme_dark {
   row-gap: 80px;
   list-style: none;
 }
@@ -303,7 +303,7 @@
 
 .footer__column_content_copyright {
   min-height: 250px;
-  width: 50%;
+  flex-basis: 711px;
   justify-content: space-between;
 }
 
