исправлены замечания ревью-1

--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,9 +1,11 @@
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   display: flex;
   flex-direction: column;
   position: relative;
   align-items: flex-start;
   z-index: 0;
+  padding-top: 100px;
+  box-sizing: border-box;
 }
