--- a/blocks/footer/__author/footer__author.css
+++ b/blocks/footer/__author/footer__author.css
@@ -1,4 +1,7 @@
 .footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
   color: #ffffff;
-  padding: 18px 0;
+  margin: 18px 0;
 }
