--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,8 +1,9 @@
-.link-opacity {
+.link {
   opacity: 1;
   transition: opacity .5s linear .1s;
+  text-decoration: none;
 }
 
-.link-opacity:hover {
+.link:hover {
   opacity: .5;
 }
