--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,4 +1,7 @@
 .logo {
   height: 32px;
   width: 228px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
