--- a/blocks/feynman/__illustration/feynman__illustration.css
+++ b/blocks/feynman/__illustration/feynman__illustration.css
@@ -1,8 +1,12 @@
 .feynman__illustration {
-  height: 637px;
-  width: 867px;
-  position: absolute;
+  background-image: url(../../../images/feynman.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   left: 0;
   bottom: 0;
+  min-height: 637px;
+  width: 867px;
+  position: absolute;
   z-index: -1;
 }
