--- a/blocks/feynman/__subtitle/feynman__subtitle.css
+++ b/blocks/feynman/__subtitle/feynman__subtitle.css
@@ -2,7 +2,6 @@
   font-size: 36px;
   line-height: 51px;
   font-weight: normal;
-  margin: 0 auto;
-  padding-top: 70px;
+  margin: 70px auto 0;
   text-align: center;
 }
