--- a/blocks/footer/__column-heading/footer__column-heading.css
+++ b/blocks/footer/__column-heading/footer__column-heading.css
@@ -1,6 +1,5 @@
 .footer__column-heading {
-  margin: 0;
-  padding-bottom: 20px;
+  margin: 0 0 20px;
   color: #ffffff;
   font-size: 18px;
   line-height: 30px;
