--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -2,5 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-bottom: 16px;
+  margin: 0 0 16px;
+  padding: 0;
+  list-style: none;
 }
