--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,9 +1,9 @@
 .header__title {
-  width: 730px;
+  max-width: 730px;
   font-size: 102px;
   line-height: 96px;
   font-weight: 600;
   color: #000000;
-  margin-left: 64px;
+  margin: 0 0 0 64px;
   z-index: 1;
 }
