--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,7 +1,7 @@
 .oakley {
   display: flex;
-  position: relative;
   align-items: flex-start;
   justify-content: center;
   background-color: #f2f2f2;
+  padding-top: 160px;
 }
