--- a/blocks/section-subtitle/section-subtitle.css
+++ b/blocks/section-subtitle/section-subtitle.css
@@ -2,9 +2,7 @@
   font-size: 24px;
   line-height: 34px;
   font-weight: normal;
-  padding-top: 20px;
-  margin: 0 auto;
+  margin: 20px auto 0;
   width: 60%;
-  display: flex;
-  justify-content: center;
+  text-align: center;
 }
