--- a/blocks/two-columns/__main-text/two-columns__main-text.css
+++ b/blocks/two-columns/__main-text/two-columns__main-text.css
@@ -1,11 +1,9 @@
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: normal;
   color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  gap: 30px;
 }
