--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,10 +1,12 @@
 .video__iframes {
-  margin: 0 auto -50px;
-  padding-top: 50px;
+  margin: 0 auto;
+  padding: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
   z-index: 1;
+  transform: translateY(50px);
+  list-style: none;
 }
