--- a/pages/index.css
+++ b/pages/index.css
@@ -1,8 +1,8 @@
 @import url(../vendor/normalize.css);
 
-@import url(../blocks/root/root.css);
+@import url(../blocks/page/page.css);
 
-@import url(../blocks/link-opacity/link-opacity.css);
+@import url(../blocks/link/link.css);
 
 @import url(../blocks/rotation/rotation.css);
 
@@ -48,8 +48,6 @@
 
 @import url(../blocks/two-columns/__span-accant/two-columns__span-accant.css);
 
-@import url(../blocks/two-columns/__span-accant/span-accant.css);
-
 @import url(../blocks/section-title/section-title.css);
 
 @import url(../blocks/section-title/_theme/section-title_theme_white.css);
@@ -78,15 +76,15 @@
 
 @import url(../blocks/techniques/techniques.css);
 
-@import url(../blocks/techniques/cards/cards.css);
+@import url(../blocks/cards/cards.css);
 
-@import url(../blocks/techniques/cards/__item/cards__item.css);
+@import url(../blocks/cards/__item/cards__item.css);
 
-@import url(../blocks/techniques/cards/__image/cards__image.css);
+@import url(../blocks/cards/__image/cards__image.css);
 
-@import url(../blocks/techniques/cards/__title/cards__title.css);
+@import url(../blocks/cards/__title/cards__title.css);
 
-@import url(../blocks/techniques/cards/__description/cards__description.css);
+@import url(../blocks/cards/__description/cards__description.css);
 
 @import url(../blocks/video/video.css);
 
