--- a/blocks/cards/__image/cards__image.css
+++ b/blocks/cards/__image/cards__image.css
@@ -1,6 +1,6 @@
 .cards__image {
   width: 160px;
-  height: 160;
+  height: 160px;
   object-fit: cover;
   border-radius: 50%;
   margin: 0 40px 43px;
